# a26

./: .gitignore  index.html  package.json  vite.config.js
src/: App.svelte  main.js  router.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: capture.rs  clip_search.rs  collab.rs  commands.rs  compressor.rs  diff.rs  lib.rs  main.rs  power_monitor.rs  recorder.rs  storage.rs  webm_export.rs
src/components/: AnnotationToolbar.svelte  Sidebar.svelte  Timeline.svelte
src/pages/: LibraryPage.svelte  PlaybackPage.svelte  RecorderPage.svelte
src/styles/: global.css
